<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@color/cortex_dark_bg">

    <TextView
        android:id="@+id/tvPermTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions_title"
        android:textColor="@color/cortex_green"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp" />

    <TextView
        android:id="@+id/tvPermDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/permissions_desc"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPermTitle"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnGrantPermissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grant_permissions"
        android:backgroundTint="@color/cortex_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPermDesc"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_text"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGrantPermissions"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
