<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@color/cortex_dark_bg">

    <ImageView
        android:id="@+id/ivBattery"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@android:drawable/ic_lock_power_off"
        android:contentDescription="@string/battery_icon_desc"
        app:layout_constraintBottom_toTopOf="@id/tvBatteryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tvBatteryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_title"
        android:textColor="@color/cortex_green"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvBatteryDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBattery"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tvBatteryDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/battery_desc"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btnDisableBattery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBatteryTitle"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnDisableBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_battery_optimization"
        android:backgroundTint="@color/cortex_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBatteryDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>
